apps/base/monitoring-release-watcher/deploy/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: monitoring-release-watcher

  labels:
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/warn: restricted
