apps/base/monitoring-release-watcher/deploy/service-prometheus.yaml
apiVersion: v1
kind: Service
metadata:
  name: release-watcher-prometheus
  labels:
    prometheus-target: release-watcher
spec:
  ports:
    - port: 8080
      name: metrics
      targetPort: metrics
  selector:
    app.kubernetes.io/name: release-watcher
    app.kubernetes.io/component: release-watcher
