apps/base/monitoring-release-watcher/deploy/networkPolicy.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-to-release-watcher
spec:
  types: [Ingress]

  podSelector:
    matchLabels:
      app.kubernetes.io/name: release-watcher
      app.kubernetes.io/component: release-watcher

  ingress:
    # Allow from prometheus
    - ports:
        - port: metrics
      from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: monitoring-prometheus
          podSelector:
            matchLabels:
              app.kubernetes.io/component: prometheus
              app.kubernetes.io/instance: k8s
              app.kubernetes.io/name: prometheus
